# MoChord

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  OPEN_SOURCE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  readme introduction  tsconfig.node.json  vite.config.ts
scripts/: dev-server.mjs  test-ai-generator-language.mjs  test-android-app-shell.mjs  test-guitar-tuning.mjs  test-harmonic-function.mjs  test-library-dashboard-ui.mjs  test-library.mjs  test-metronome-engine.mjs  test-music-theory.mjs  test-practice-coach.mjs  test-practice-display-localization.mjs  test-practice-mode.mjs  test-practice-stats.mjs  test-practice-voicing-path.mjs  test-profile-display.mjs  test-profile-service.mjs  test-progress-sync.mjs  test-progression-localization.mjs  test-runtime.mjs  test-shape-code-visibility.mjs  test-song-arrangement.mjs  test-song-draft.mjs  test-style-templates.mjs  test-text-quality.mjs  test-tuner-engine.mjs  test-workspace-state.mjs
src/: App.tsx  i18n.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AIProgressionGenerator.tsx  AudioControls.tsx  ChordInput.tsx  ChordSummary.tsx  ChordVoicingGallery.tsx  EditableChordDiagram.tsx  FretboardDiagram.tsx  LanguageToggle.tsx  MetronomeControls.tsx  ScaleModeGenerator.tsx  SongDraftGenerator.tsx  StaffViewer.tsx  TabViewer.tsx  TunerControls.tsx  TunerDial.tsx  TuningSelector.tsx
src/data/: chordShapes.ts  (+2 more)
supabase/: schema.sql
(+58 files in other folders)
